# D3vz API/Controllers/DBAPI/AlunoController.cs
@@ -19,22 +19,21 @@ namespace D3vz_API.Controllers.DBAPI {
             try {
                 base.Add(nm_user, email, senha, cpf, dt_nasc, interesses);
 
-                using (var db = new D3vzAPI_dbContext()) {
-                    var inte = MakeInterQuali(interesses, db);
-                    var user = new TUser() {
-                        Discriminacao = "aluno",
-                        NmUsuario = nm_user,
-                        DsEmail = email,
-                        DsSenha = senha,
-                        NrCpf = cpf,
-                        DtNascimento = dt_nasc,
-                        TUser_TInterQuali = MakeInterQuali(interesses, db),
-                        TAluno = new TAluno()
-                    };
-                    db.TUsers.Add(user);
-                    db.SaveChanges();
-                    return StatusCode((int) HttpStatusCode.OK);
-                }
+                using var db = new D3vzAPI_dbContext();
+                var inte = MakeInterQuali(interesses, db);
+                var user = new TUser() {
+                    Discriminacao = "aluno",
+                    NmUsuario = nm_user,
+                    DsEmail = email,
+                    DsSenha = senha,
+                    NrCpf = cpf,
+                    DtNascimento = dt_nasc,
+                    TUser_TInterQuali = MakeInterQuali(interesses, db),
+                    TAluno = new TAluno()
+                };
+                db.TUsers.Add(user);
+                db.SaveChanges();
+                return StatusCode((int)HttpStatusCode.OK);
             } catch (Exception ex) {
                 return StatusCode((int)HttpStatusCode.InternalServerError, new JsonResult(ex));
             }
@@ -43,18 +42,17 @@ namespace D3vz_API.Controllers.DBAPI {
         [HttpDelete()]
         public override IActionResult Delete(int Id) {
             try {
-                using (var db = new D3vzAPI_dbContext()) {
-                    var aluno = db.TAlunos.Where(e => e.TUserIdUser == Id).Include(e => e.TUserIdUserNavigation).FirstOrDefault();
-                    if (aluno == null)
-                        return StatusCode((int)HttpStatusCode.NotFound, new JsonResult(new {
-                            Erro = "Cadastro não encontrado."
-                        }));
+                using var db = new D3vzAPI_dbContext();
+                var aluno = db.TAlunos.Where(e => e.TUserIdUser == Id).Include(e => e.TUserIdUserNavigation).FirstOrDefault();
+                if (aluno == null)
+                    return StatusCode((int)HttpStatusCode.NotFound, new JsonResult(new {
+                        Erro = "Cadastro não encontrado."
+                    }));
 
-                    db.TAlunos.Remove(aluno);
-                    db.TUsers.Remove(aluno.TUserIdUserNavigation);
-                    db.SaveChanges();
-                    return StatusCode((int)HttpStatusCode.OK);
-                }
+                db.TAlunos.Remove(aluno);
+                db.TUsers.Remove(aluno.TUserIdUserNavigation);
+                db.SaveChanges();
+                return StatusCode((int)HttpStatusCode.OK);
             } catch (Exception ex) {
                 return StatusCode((int) HttpStatusCode.InternalServerError, new JsonResult(ex));
             }
@@ -63,23 +61,22 @@ namespace D3vz_API.Controllers.DBAPI {
         [HttpGet("GetById")]
         public override IActionResult Get(long id) {
             try {
-                using (var db = new D3vzAPI_dbContext()) {
-                    var alunos = (from aluno in (db.TAlunos
-                                    .Include(e => e.TUserIdUserNavigation)
-                                    .ThenInclude(e => e.TUser_TInterQuali)
-                                    .ThenInclude(e => e.TInterQuali_Navigation))
-                                    .Where(e => e.TUserIdUserNavigation.IdUser == id)
-                                  select new {
-                                      ID = aluno.TUserIdUser,
-                                      Nome = aluno.TUserIdUserNavigation.NmUsuario,
-                                      Email = aluno.TUserIdUserNavigation.DsEmail,
-                                      CPF = aluno.TUserIdUserNavigation.NrCpf,
-                                      Nascimento = aluno.TUserIdUserNavigation.DtNascimento,
-                                      Interesses = aluno.TUserIdUserNavigation.TUser_TInterQuali.Select(e => e.TInterQuali_Navigation.DsLinguagem)
-                                  }).FirstOrDefault();
+                using var db = new D3vzAPI_dbContext();
+                var alunos = (from aluno in (db.TAlunos
+                                .Include(e => e.TUserIdUserNavigation)
+                                .ThenInclude(e => e.TUser_TInterQuali)
+                                .ThenInclude(e => e.TInterQuali_Navigation))
+                                .Where(e => e.TUserIdUserNavigation.IdUser == id)
+                              select new {
+                                  ID = aluno.TUserIdUser,
+                                  Nome = aluno.TUserIdUserNavigation.NmUsuario,
+                                  Email = aluno.TUserIdUserNavigation.DsEmail,
+                                  CPF = aluno.TUserIdUserNavigation.NrCpf,
+                                  Nascimento = aluno.TUserIdUserNavigation.DtNascimento,
+                                  Interesses = aluno.TUserIdUserNavigation.TUser_TInterQuali.Select(e => e.TInterQuali_Navigation.DsLinguagem)
+                              }).FirstOrDefault();
 
-                    return new JsonResult(alunos);
-                }
+                return new JsonResult(alunos);
             } catch (Exception ex) {
                 return StatusCode((int)HttpStatusCode.InternalServerError, new JsonResult(ex));
             }
@@ -88,22 +85,21 @@ namespace D3vz_API.Controllers.DBAPI {
         [HttpGet()]
         public override IActionResult Get(string email) {
             try {
-                using (var db = new D3vzAPI_dbContext()) {
-                    var alunos = (from aluno in (db.TAlunos
-                                    .Include(e => e.TUserIdUserNavigation)
-                                    .ThenInclude(e => e.TUser_TInterQuali)
-                                    .ThenInclude(e => e.TInterQuali_Navigation)
-                                    .Where(e => e.TUserIdUserNavigation.DsEmail == email))
-                                  select new {
-                                      ID = aluno.TUserIdUser,
-                                      Nome = aluno.TUserIdUserNavigation.NmUsuario,
-                                      Email = aluno.TUserIdUserNavigation.DsEmail,
-                                      CPF = aluno.TUserIdUserNavigation.NrCpf,
-                                      Nascimento = aluno.TUserIdUserNavigation.DtNascimento,
-                                      Interesses = aluno.TUserIdUserNavigation.TUser_TInterQuali.Select(e => e.TInterQuali_Navigation.DsLinguagem)
-                                  }).FirstOrDefault();
-                    return new JsonResult(alunos);
-                }
+                using var db = new D3vzAPI_dbContext();
+                var alunos = (from aluno in (db.TAlunos
+                                .Include(e => e.TUserIdUserNavigation)
+                                .ThenInclude(e => e.TUser_TInterQuali)
+                                .ThenInclude(e => e.TInterQuali_Navigation)
+                                .Where(e => e.TUserIdUserNavigation.DsEmail == email))
+                              select new {
+                                  ID = aluno.TUserIdUser,
+                                  Nome = aluno.TUserIdUserNavigation.NmUsuario,
+                                  Email = aluno.TUserIdUserNavigation.DsEmail,
+                                  CPF = aluno.TUserIdUserNavigation.NrCpf,
+                                  Nascimento = aluno.TUserIdUserNavigation.DtNascimento,
+                                  Interesses = aluno.TUserIdUserNavigation.TUser_TInterQuali.Select(e => e.TInterQuali_Navigation.DsLinguagem)
+                              }).FirstOrDefault();
+                return new JsonResult(alunos);
             } catch (Exception ex) {
                 return StatusCode((int)HttpStatusCode.InternalServerError, new JsonResult(ex));
             }
@@ -112,37 +108,36 @@ namespace D3vz_API.Controllers.DBAPI {
         [HttpPut()]
         public override IActionResult Update(long id, string? nm_user, string? email, string? senha, string? cpf, DateTime? dt_nasc, string[] interesses) {
             try {
-                using (var db = new D3vzAPI_dbContext()) {
-                    var aluno = db.TAlunos
-                        .Where(a => a.TUserIdUser == id)
-                        .Include(e => e.TUserIdUserNavigation)
-                        .ThenInclude(e => e.TUser_TInterQuali)
-                        .ThenInclude(e => e.TInterQuali_Navigation)
-                        .FirstOrDefault();
+                using var db = new D3vzAPI_dbContext();
+                var aluno = db.TAlunos
+                    .Where(a => a.TUserIdUser == id)
+                    .Include(e => e.TUserIdUserNavigation)
+                    .ThenInclude(e => e.TUser_TInterQuali)
+                    .ThenInclude(e => e.TInterQuali_Navigation)
+                    .FirstOrDefault();
 
-                    if (aluno == null)
-                        return StatusCode((int) HttpStatusCode.NotFound, new JsonResult(new {
-                            Erro = "Cadastro não encontrado."
-                        }));
+                if (aluno == null)
+                    return StatusCode((int)HttpStatusCode.NotFound, new JsonResult(new {
+                        Erro = "Cadastro não encontrado."
+                    }));
 
-                    if (!string.IsNullOrEmpty(nm_user)) aluno.TUserIdUserNavigation.NmUsuario = nm_user;
-                    if (!string.IsNullOrEmpty(email)) aluno.TUserIdUserNavigation.DsEmail = email;
-                    if (!string.IsNullOrEmpty(senha)) aluno.TUserIdUserNavigation.DsSenha = senha;
-                    if (!string.IsNullOrEmpty(cpf)) aluno.TUserIdUserNavigation.NrCpf = cpf;
-                    if (dt_nasc != null) aluno.TUserIdUserNavigation.DtNascimento = dt_nasc.Value;
-                    if (interesses != null) {
-                        var remover = aluno.TUserIdUserNavigation.TUser_TInterQuali.Where(e => !interesses.Contains(e.TInterQuali_Navigation.DsLinguagem));
-                        var adicionar = interesses.Where(e => aluno.TUserIdUserNavigation.TUser_TInterQuali.Where(e1 => e1.TInterQuali_Navigation.DsLinguagem == e).FirstOrDefault() == null);
-                        foreach (var item in remover)
-                            aluno.TUserIdUserNavigation.TUser_TInterQuali.Remove(item);
-                        foreach (var item in adicionar)
-                            aluno.TUserIdUserNavigation.TUser_TInterQuali.Add(MakeInterQuali(new string[] { item }, db).First());
-                    }
-
-                    db.SaveChanges();
-
-                    return StatusCode((int)HttpStatusCode.OK);
+                if (!string.IsNullOrEmpty(nm_user)) aluno.TUserIdUserNavigation.NmUsuario = nm_user;
+                if (!string.IsNullOrEmpty(email)) aluno.TUserIdUserNavigation.DsEmail = email;
+                if (!string.IsNullOrEmpty(senha)) aluno.TUserIdUserNavigation.DsSenha = senha;
+                if (!string.IsNullOrEmpty(cpf)) aluno.TUserIdUserNavigation.NrCpf = cpf;
+                if (dt_nasc != null) aluno.TUserIdUserNavigation.DtNascimento = dt_nasc.Value;
+                if (interesses != null) {
+                    var remover = aluno.TUserIdUserNavigation.TUser_TInterQuali.Where(e => !interesses.Contains(e.TInterQuali_Navigation.DsLinguagem));
+                    var adicionar = interesses.Where(e => aluno.TUserIdUserNavigation.TUser_TInterQuali.Where(e1 => e1.TInterQuali_Navigation.DsLinguagem == e).FirstOrDefault() == null);
+                    foreach (var item in remover)
+                        aluno.TUserIdUserNavigation.TUser_TInterQuali.Remove(item);
+                    foreach (var item in adicionar)
+                        aluno.TUserIdUserNavigation.TUser_TInterQuali.Add(MakeInterQuali(new string[] { item }, db).First());
                 }
+
+                db.SaveChanges();
+
+                return StatusCode((int)HttpStatusCode.OK);
             } catch (Exception ex) {
                 return StatusCode((int)HttpStatusCode.InternalServerError, new JsonResult(ex));
             }
